@@ -1,5 +1,5 @@
 from pysnmp.smi.indices import OidOrderedDict
-from pysnmp.smi import exval, error
+from pysnmp.smi import mibdata, exval, error
 from pysnmp.proto import rfc1902
 from pyasn1.type import constraint
 from pyasn1.error import ValueConstraintError, PyAsn1Error
@@ -23,34 +23,9 @@ Counter64 = rfc1902.Counter64
 class ExtUTCTime(OctetString):
     subtypeSpec = OctetString.subtypeSpec+constraint.ConstraintsUnion(constraint.ValueSizeConstraint(11,11), constraint.ValueSizeConstraint(13,13))
 
-# MIB tree foundation classes
-
-class MibNode:
-    label = ''
-    def __init__(self, name):
-        self.name = name
-        
-    def __repr__(self):
-        return '%s(%r)' % (self.__class__.__name__, self.name)
-
-    def getName(self): return self.name
-    
-    def getLabel(self): return self.label
-    def setLabel(self, label):
-        self.label = label
-        return self
-
-    def clone(self, name=None):
-        myClone = self.__class__(self.name)
-        if name is not None:
-            myClone.name = name
-        if self.label is not None:
-            myClone.label = self.label
-        return myClone
-    
 # definitions for information modules
 
-class ModuleIdentity(MibNode):
+class ModuleIdentity(mibdata.MibNode):
     def getLastUpdated(self):
         return getattr(self, 'lastUpdated', '')
     def setLastUpdated(self, v):
@@ -91,7 +66,7 @@ MODULE-IDENTITY\n\
      self.getDescription(),
      ''.join([ "REVISION \"%s\"\n" % x for x in self.getRevisions() ]))
 
-class ObjectIdentity(MibNode):
+class ObjectIdentity(mibdata.MibNode):
     def getStatus(self):
         return getattr(self, 'status', 'current')
     def setStatus(self, v):
@@ -120,7 +95,7 @@ OBJECT-IDENTITY\n\
 
 # definition for objects
 
-class NotificationType(MibNode):
+class NotificationType(mibdata.MibNode):
     def getObjects(self):
         return getattr(self, 'objects', ())
     def setObjects(self, *args):
@@ -154,14 +129,14 @@ NOTIFICATION-TYPE\n\
      self.getDescription(),
      ''.join([ "REVISION \"%s\"\n" % x for x in self.getRevisions() ]))
 
-class MibIdentifier(MibNode):
+class MibIdentifier(mibdata.MibNode):
     def asn1Print(self):
         return 'OBJECT IDENTIFIER'
 
-class ObjectType(MibNode):
+class ObjectType(mibdata.MibNode):
     maxAccess = None
     def __init__(self, name, syntax=None):
-        MibNode.__init__(self, name)
+        mibdata.MibNode.__init__(self, name)
         self.syntax = syntax
 
     # XXX
@@ -1039,7 +1014,7 @@ dod = MibIdentifier(org.name + (6,))
 internet = MibIdentifier(dod.name + (1,))
 directory = MibIdentifier(internet.name + (1,))
 mgmt = MibIdentifier(internet.name + (2,))
-mib_2 = MibIdentifier(mgmt.name + (1,)); mib_2.label = 'mib-2'
+mib_2 = MibIdentifier(mgmt.name + (1,)).setLabel('mib-2')
 transmission = MibIdentifier(mib_2.name + (10,))
 experimental = MibIdentifier(internet.name + (3,))
 private = MibIdentifier(internet.name + (4,))
@@ -1055,7 +1030,7 @@ mibBuilder.exportSymbols(
     'SNMPv2-SMI', Integer32=Integer32, Bits=Bits, IpAddress=IpAddress,
     Counter32=Counter32,    Gauge32=Gauge32, Unsigned32=Unsigned32,
     TimeTicks=TimeTicks, Opaque=Opaque, Counter64=Counter64,
-    ExtUTCTime=ExtUTCTime, MibNode=MibNode,
+    ExtUTCTime=ExtUTCTime,
     ModuleIdentity=ModuleIdentity, ObjectIdentity=ObjectIdentity,
     NotificationType=NotificationType, MibScalar=MibScalar,
     MibScalarInstance=MibScalarInstance,
